@@ -1,4 +1,12 @@
-(use-package '("COMMON-LISP" "EXT") "SCREEN")
+;; SCREEN is actually conditionally defined in constpack.d,
+;; but the condition (in lispbibl.d) is too hairy
+;; to duplicate it in makemake.in, so this file is always compiled
+;; (even when it is not subsequently loaded by ini.lisp),
+;; thus we have to use DEFPACKAGE here just in case
+
+(defpackage "SCREEN"
+  (:use "COMMON-LISP" "EXT"))
+
 (in-package "SCREEN")
 
 #|
