@@ -1,3 +1,8 @@
+2001-06-01  Sam Steingold  <sds@gnu.org>
+
+	* screen.lisp: use DEFPACKAGE instead of USE-PACKAGE since this
+	file is compiled even when it is not subsequently loaded.
+
 2001-05-30  Sam Steingold  <sds@gnu.org>
 
 	* compiler.lisp (compile-file-pathname-helper): return a logical
